--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-        skopeo copy docker://docker.io/mysql/mysql-server docker://registry.cn-hangzhou.aliyuncs.com/docker_image-ljx/nacos-server:v2.3.0
+        skopeo copy docker://docker.io/mysql/mysql-server docker://registry.cn-hangzhou.aliyuncs.com/mysql/mysql-server
