--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-        skopeo copy docker://docker.io/langgenius/dify-web:0.7.0 docker://registry.cn-hangzhou.aliyuncs.com/tqc_docker/dify-web:0.7.0
+        skopeo copy docker://docker.io/library/python:3.12.1-slim-bookworm docker://registry.cn-hangzhou.aliyuncs.com/tqc_docker/python:3.12.1-slim-bookworm
